tdf#169077 dataproviderdlg setID expects mxEditID

maID needs to contain the string from mxEditID. In content it needs to
be the XPath to the desired table element in the imported source.
You can see the use of this element in the already working unit test
ScDataProvidersTest::testHTMLImport

Change-Id: If4de7fa345205e5afc2d93a198d88b6788be3700
Reviewed-on: https://gerrit.libreoffice.org/c/core/+/194789
Tested-by: Jenkins
Reviewed-by: Regina Henschel <rb.henschel@t-online.de>